# PointLE

./: Public_Dataset.md  README.md  Self-collected_Dataset.md  data_concat.py  data_load.py  model.py  train_lstm.py  train_mlp.py
3dmfv/: eval.py  provider.py  test.py  train_cls.py
3dmfv/models/: 3dmfv_net_cls.py  fv_decoder.py  voxnet_3dmfv.py
3dmfv/utils/: pc_util.py  visualization.py
dgcnn/: evaluate.py  provider.py  train.py
dgcnn/dump/: pred_label.txt
dgcnn/log/: 11model.ckpt.index  checkpoint  dgcnn.py  log_train.txt
dgcnn/tensorflow/: eval.py
dgcnn/tensorflow/dump/: log_evaluate.txt  pred_label_dgcnn.txt
ground_seg/: README
ground_seg/common_zs/: CMakeLists.txt  package.xml
ground_seg/common_zs/include/: common_zs.h
ground_seg/gp_insac/: .gitignore  CMakeLists.txt  default.rviz  main.cpp  package.xml
ground_seg/gp_insac/include/ground_extraction/: Boundary.h  GaussianProcess.h  GaussianProcessRegression.hxx  GroundExtraction.h  INSAC.h  SectorPartition.h
ground_seg/gp_insac/launch/: gp_insac.launch  gp_insac_test.launch  gpinsac_origin.launch
ground_seg/gp_insac/src/ground_extraction/: Boundary.cpp  GroundExtraction.cpp  INSAC.cpp  SectorPartition.cpp
ground_seg/gp_insac/test/: CMakeLists.txt  test.cpp  test_gpr.cpp
ground_seg/line_ground_seg/: CMakeLists.txt  README.md  main.cpp  package.xml
ground_seg/line_ground_seg/include/: line_seg_node.h
ground_seg/line_ground_seg/include/ground_segmentation/: bin.h  ground_segmentation.h  segment.h
ground_seg/line_ground_seg/launch/: line_ground_seg.launch  line_ground_seg_params.yaml  line_ground_seg_params_test.yaml  line_ground_seg_test.launch
ground_seg/line_ground_seg/src/: line_seg_node.cpp
ground_seg/line_ground_seg/src/ground_segmentation/: bin.cpp  ground_segmentation.cpp  segment.cpp
ground_seg/line_ground_seg/test/: CMakeLists.txt  test.cpp
ground_seg/mm_ground_seg/: CMakeLists.txt  main.cpp  package.xml
ground_seg/mm_ground_seg/debug/: 0001.pcd  0001_mm_ground.pcd  0001_no_ground.pcd  0579.pcd  0579_mm_ground.pcd  0579_no_ground.pcd  0580.pcd  0580_mm_ground.pcd  0580_no_ground.pcd  0581.pcd  0581_mm_ground.pcd  0581_no_ground.pcd
ground_seg/mm_ground_seg/include/: mm_seg_node.h
ground_seg/mm_ground_seg/include/hybrid_model_regression/: bin.h  common.hpp  gaussian_process.hpp  gp_predictor.h  ground_segmentation.h  segment.h
ground_seg/mm_ground_seg/launch/: gp_regression_params.yaml  hybrid_ground_seg.launch  hybrid_ground_seg_test.launch  line_regression_params.yaml
ground_seg/mm_ground_seg/src/: mm_seg_node.cpp
ground_seg/mm_ground_seg/src/hybrid_model_regression/: bin.cpp  gp_predictor.cpp  ground_segmentation.cpp  segment.cpp
ground_seg/mm_ground_seg/test/: CMakeLists.txt  test.cpp
ground_seg/z_ground_test/: CMakeLists.txt  mm_ground_seg.cpp  other_ground_detector.h  package.xml  test.cpp  test_extract.cpp  test_single.cpp
ground_seg/z_ground_test/launch/: gp_insac_params.yaml  gp_regression_params.yaml  ground_test.launch  ground_test_extract.launch  ground_test_single.launch  line_ground_seg_params.yaml  line_regression_params.yaml  mm_ground_seg (copy).launch  mm_ground_seg.launch
ground_seg/z_ground_test/launch/kitti/: line_regression_params.yaml
pointnet++/: eval.py  modelnet_h5_dataset.py  modelnet_h5_dataset_test.py  test.py
pointnet++/dump/: log_test.txt  pointnet2.txt  pred_label.txt  pred_label_pointnet2.txt  test_old.py
pointnet++/log/: 11model.ckpt.index  checkpoint  log_train.txt  pointnet2_cls_ssg.py  train.py
pointnet++/tf_ops/3d_interpolation/: tf_interpolate_compile.sh
pointnet++/tf_ops/grouping/: tf_grouping_compile.sh
pointnet++/tf_ops/sampling/: tf_sampling_compile.sh
